<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PokeDetailActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="backBtn"
        android:padding="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Pokedex"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPokemonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="#"
        android:layout_marginEnd="1dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvPokemonId"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemonCard"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="65dp"
        app:cardBackgroundColor="#ff0000"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPokemon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/pokemon_image"
            android:scaleType="fitCenter" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pokemonCard"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Pikachu"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemonCardType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#ff0000"
        app:cardCornerRadius="32dp"
        android:layout_marginTop="28dp"

        app:layout_constraintTop_toBottomOf="@id/tvPokemonName"
        app:layout_constraintEnd_toStartOf="@id/pokemonCardType2"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvPokemonType1"
            android:layout_width="wrap_content"
            android:text="water"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingVertical="4dp"
            android:paddingHorizontal="24dp"
            android:textAllCaps="true"
            android:layout_height="wrap_content" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemonCardType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#ff0000"
        app:cardCornerRadius="32dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/tvPokemonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pokemonCardType1">

    <TextView
        android:id="@+id/tvPokemonType2"
        android:layout_width="wrap_content"
        android:text="flying"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingVertical="4dp"
        android:paddingHorizontal="24dp"
        android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPokemonStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/pokemonCardType1"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/pokemonStats"
        app:layout_constraintTop_toBottomOf="@id/tvPokemonStats"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp">

        <View
            android:id="@+id/viewHp"
            android:layout_width="0dp"
            android:background="@color/pokemon_stat_hp"
            android:layout_marginHorizontal="4dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewAttack"
            android:layout_width="0dp"
            android:background="@color/pokemon_stat_attack"
            android:layout_marginHorizontal="4dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewDefense"
            android:layout_width="0dp"
            android:background="@color/pokemon_stat_defense"
            android:layout_marginHorizontal="4dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewSpAttack"
            android:layout_width="0dp"
            android:background="@color/pokemon_stat_special_attack"
            android:layout_marginHorizontal="4dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewSpDefense"
            android:layout_width="0dp"
            android:background="@color/pokemon_stat_special_defense"
            android:layout_marginHorizontal="4dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewSpeed"
            android:layout_width="0dp"
            android:background="@color/pokemon_stat_speed"
            android:layout_marginHorizontal="4dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerTvStats"
        app:layout_constraintTop_toBottomOf="@id/pokemonStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/hp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textAlignment="center"
            android:text="@string/atk"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginHorizontal="4dp"
            android:textAlignment="center"
            android:text="@string/def"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textSize="18sp"
            android:text="@string/sp_atk"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/sp_def"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spd"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toBottomOf="@id/pokemonStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvHp"
            android:layout_width="0dp"
            android:textColor="#838383"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvAtk"
            android:layout_width="0dp"
            android:textColor="#838383"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvDef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#838383"
            android:layout_marginHorizontal="4dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvSpAtk"
            android:layout_width="0dp"
            android:textColor="#838383"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvSpDef"
            android:layout_width="0dp"
            android:textColor="#838383"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvSpd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#838383"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>